[tool.poetry]
name = "hackerrank"
version = "0.1.0"
description = ""
authors = ["Gustavo Garcia"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.3"
ipython = "^7.16.1"
snakeviz = "^2.1.0"
pytest-cov = "^2.10.0"
hypothesis = "^5.20.2"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
